--- a/WooCommerce/Resources/pt-BR.lproj/Localizable.strings
+++ b/WooCommerce/Resources/pt-BR.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-05-13 20:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-28 15:54:02+0000 */
 /* Plural-Forms: nplurals=2; plural=(n > 1); */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: pt_BR */
@@ -82,7 +82,7 @@
 "Application Logs" = "Logs de aplicativos";
 
 /* Change order status screen - button title to apply selection */
-"Apply" = "Apply";
+"Apply" = "Aplicar";
 
 /* Approve a comment */
 "Approve" = "Aprovar";
@@ -188,7 +188,7 @@
 "Couldn't connect. Required XML-RPC methods are missing on the server." = "Não foi possível conectar. Os métodos XML-RPC solicitados estão ausentes do servidor.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
-"Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Não foi possível conectar. Recebemos um erro 403 ao tentar acessar o endpoint XMLRPC do seu site. O aplicativo precisa disso para se comunicar com o seu site. Entre em contato com sua hospedagem para resolver este problema.";
+"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Não foi possível conectar. Recebemos um erro 403 ao tentar acessar o endpoint XMLRPC do seu site. O aplicativo precisa disso para se comunicar com o seu site. Entre em contato com sua hospedagem para resolver este problema.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 405 error, meaning that the host is blocking POST requests on /xmlrpc.php file. */
 "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem." = "Não foi possível conectar. Seu serviço de hospedagem está bloqueando solicitações POST e o aplicativo precisa delas para se comunicar com o seu site. Entre em contato com sua hospedagem para resolver este problema.";
@@ -223,7 +223,8 @@
 /* Accessibility hint for delete button in an individual Shipment Tracking in the order fulfillment screen */
 "Delete" = "Excluir";
 
-/* Delete a Shipment Tracking */
+/* Delete a Shipment Tracking
+   Delete tracking button title */
 "Delete Tracking" = "Excluir rastreamento";
 
 /* Accessibility hint for Delete Shipment button in Order fulfillment screen */
@@ -239,7 +240,7 @@
 "Discount" = "Desconto";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet - Product details screen - button title for closing the view */
+   Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Dispensar";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -249,7 +250,7 @@
 "Dotcom Error: [(code)] (theMessage)" = "Erro Dotcom: [(code)] (theMessage)";
 
 /* WordPress.com error thrown when the the request REST API url is invalid. */
-"Dotcom Invalid REST Route" = "Dotcom Invalid REST Route";
+"Dotcom Invalid REST Route" = "Rota REST Dotcom inválida";
 
 /* WordPress.com Missing Token */
 "Dotcom Missing Token" = "Token Dotcom ausente";
@@ -269,6 +270,9 @@
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Clique duas vezes para alternar a configuração.";
 
+/* Display label for the product's draft status */
+"Draft" = "Rascunho";
+
 /* Email address text field placeholder */
 "Email" = "E-mail";
 
@@ -286,6 +290,9 @@
 
 /* Message to show to user when he tries to add a self-hosted site that is an empty URL. */
 "Empty URL" = "URL vazia";
+
+/* Error message shown when a URL is invalid. */
+"Enter a valid URL eg. example.com." = "Enter a valid URL eg. example.com.";
 
 /* Add custom shipping provider. Placeholder of cell presenting provider name */
 "Enter provider name" = "Inserir nome da transportadora";
@@ -366,9 +373,6 @@
 
 /* Footer text to hide the billing cell */
 "Hide billing" = "Ocultar cobrança";
-
-/* Error message shown a URL does not point to an existing site. */
-"Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "Ei... Parece que não há um site WordPress nesse URL. Verifique se há erros de digitação e tente novamente.";
 
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "Se estiverem desativadas, a observação será em caráter privado";
@@ -498,6 +502,9 @@
 /* Plural of 'month' — a statistical unit */
 "Months" = "Meses";
 
+/* Accessibility hint for more button in an individual Shipment Tracking in the order details screen */
+"More" = "Mais";
+
 /* Spam Action Spoken hint. */
 "Moves a comment to Spam" = "Define um comentário como spam";
 
@@ -554,7 +561,7 @@
 "No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
-"Not shipped yet" = "Not shipped yet";
+"Not shipped yet" = "Ainda não enviado";
 
 /* Labels an order note to let user know it's visible to the customer
    Spoken accessibility label for an icon image that indicates it's a note to the customer. */
@@ -596,7 +603,7 @@
 "Open Source Licenses" = "Licenças de código aberto";
 
 /* Accessibility hint for the button to update the order status */
-"Opens a list of available statuses." = "Opens a list of available statuses.";
+"Opens a list of available statuses." = "Abre uma lista de status disponíveis.";
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "Informações de rastreamento opcionais";
@@ -612,13 +619,13 @@
 "Order Notes" = "Observações do pedido";
 
 /* Change order status screen - Screen title */
-"Order Status" = "Order Status";
+"Order Status" = "Status do pedido";
 
 /* Order fulfillment success notice */
 "Order marked as fulfilled" = "Pedido marcado como concluído";
 
 /* Order status update success notice */
-"Order status updated" = "Order status updated";
+"Order status updated" = "Status do pedido atualizado";
 
 /* Name of the Orders filter on the Notifications screen - it means only order notifications will be displayed. Plural form of the word Order.
    Orders stat label on dashboard - should be plural. - Title of the Orders tab — plural form of Order - Title that appears on top of the Order List screen when there is no filter applied to the list (plural form of the word Order). */
@@ -642,6 +649,9 @@
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of (totalValue) received via (order.paymentMethodTitle)" = "Pagamento de (totalValue) recebido via (order.paymentMethodTitle)";
+
+/* Display label for the product's pending status */
+"Pending" = "Pendente";
 
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "Número de telefone: %@";
@@ -686,6 +696,9 @@
    Privacy settings screen title */
 "Privacy Settings" = "Configurações de privacidade";
 
+/* Display label for the product's private status */
+"Private" = "Privado";
+
 /* Labels an order note to let the user know it's private and not seen by the customer
    Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
 "Private note" = "Nota privada";
@@ -702,6 +715,9 @@
 
 /* Add Custom shipping provider. Title of cell presenting the provider name */
 "Provider name" = "Nome da transportadora";
+
+/* Display label for the product's published status */
+"Publish" = "Publicar";
 
 /* shown in promotional screens during first launch */
 "Publish from the park. Blog from the bus. Comment from the café. WordPress goes where you do." = "Publique do parque. Faça um post no ônibus. Comente da cafeteria. WordPress te acompanha, onde você estiver.";
@@ -730,7 +746,7 @@
 "Report Crashes" = "Reportar travamentos";
 
 /* Deletes all activity logs except for the marked 'Current'. */
-"Reset Activity Log" = "Reset Activity Log";
+"Reset Activity Log" = "Excluir log de atividades";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
 "Retrieves a list of orders that contain a given keyword." = "Recupera uma lista de pedidos que contêm uma determinada palavra-chave.";
@@ -748,7 +764,8 @@
 /* Description text used on the UI element displayed when a user has pending orders to process. */
 "Review, prepare, and ship these pending orders" = "Revise, prepare e envie esses pedidos pendentes";
 
-/* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review. */
+/* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
+   Reviews descriptive label */
 "Reviews" = "Avaliações";
 
 /* SKU label */
@@ -764,10 +781,10 @@
 "Search orders" = "Pesquise pedidos";
 
 /* Page title for the select a different store screen */
-"Select Store" = "Select Store";
+"Select Store" = "Selecionar loja";
 
 /* My Store > Settings > Selected Store information section. This is the heading listed above the information row that displays the store website and their username. */
-"Selected Store" = "Selected Store";
+"Selected Store" = "Loja selecionada";
 
 /* Title of a button. The text should be uppercase.  Clicking requests a hyperlink be emailed ot the user. */
 "Send Link" = "Enviar link";
@@ -786,11 +803,11 @@
 "Share your Store" = "Compartilhe sua loja";
 
 /* Accessibility label for Shipment tracking company in Order details screen. Reads like: Shipment Company USPS */
-"Shipment Company %@" = "Shipment Company %@";
+"Shipment Company %@" = "Transportadora %@";
 
 /* Accessibility label for Shipment date in Order details screen. Shipped: February 27, 2018.
    Date an item was shipped */
-"Shipped %@" = "Shipped %@";
+"Shipped %@" = "Enviado em %@";
 
 /* Shipping label for payment view */
 "Shipping" = "Envio";
@@ -806,6 +823,9 @@
 
 /* Footer text to show the billing cell */
 "Show billing" = "Mostrar cobrança";
+
+/* Accessibility hint for Delete Shipment button in Order details screen */
+"Shows more options." = "Shows more options.";
 
 /* When social login fails, this button offers to let them signup for a new WordPress.com account */
 "Sign up" = "Registrar-se";
@@ -892,10 +912,10 @@
 "Subtotal" = "Subtotal";
 
 /* This action allows the user to change stores without logging out and logging back in again. */
-"Switch Store" = "Switch Store";
+"Switch Store" = "Alterar loja";
 
 /* Message presented after users switch to a new store. Reads like: Switched to {store name}. You will only receive notifications from this store. */
-"Switched to (newStoreName). You will only receive notifications from this store." = "Switched to (newStoreName). You will only receive notifications from this store.";
+"Switched to (newStoreName). You will only receive notifications from this store." = "Alterado para (newStoreName). Você receberá apenas notificações desta loja.";
 
 /* Labels an order note to let user know it's a system status message */
 "System status" = "Status do sistema";
@@ -953,6 +973,9 @@
 
 /* No comment provided by engineer. */
 "The site address must be shorter than 64 characters." = "O endereço do site deve ter menos que 64 caracteres.";
+
+/* Error message shown a URL does not point to an existing site. */
+"The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress." = "Este endereço não pertence a um site do WordPress. Ele precisa usar o WordPress para realizarmos uma conexão.";
 
 /* Message shown when site deletion API failed */
 "The site could not be deleted." = "Não foi possível excluir o site.";
@@ -1012,17 +1035,20 @@
 /* Total label for payment view */
 "Total" = "Total";
 
+/* Product details screen - total orders descriptive label */
+"Total Orders" = "Total Orders";
+
 /* Description for Top Performers right column header */
 "Total Spend" = "Total gasto";
 
 /* Top performers — label for the total number of products ordered */
 "Total orders: %ld" = "Total de pedidos: %ld";
 
-/* Track package button title */
-"Track package" = "Track package";
+/* Track shipment button title */
+"Track Shipment" = "Track Shipment";
 
 /* Order tracking section title */
-"Tracking" = "Tracking";
+"Tracking" = "Rastreamento";
 
 /* Add custom shipping provider. Title of cell presenting tracking link */
 "Tracking link (optional)" = "Link de rastreamento (opcional)";
@@ -1031,10 +1057,7 @@
 "Tracking number" = "Número de rastreamento";
 
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
-"Tracking number %@" = "Tracking number %@";
-
-/* Accessibility hint for Track Package button in Order details screen */
-"Tracks a shipment." = "Tracks a shipment.";
+"Tracking number %@" = "Número de rastreamento %@";
 
 /* Move a comment to the trash */
 "Trash" = "Enviar para a lixeira";
@@ -1055,13 +1078,13 @@
 "Unable To Connect" = "Não foi possível conectar";
 
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
-"Unable to add note to order #(viewModel.order.orderID)" = "Unable to add note to order #(viewModel.order.orderID)";
+"Unable to add note to order #(viewModel.order.orderID)" = "Não foi possível adicionar uma nota ao pedido de nº (viewModel.order.orderID)";
 
 /* Content of error presented when Add Shipment Tracking Action Failed. It reads: Unable to add tracking to order #{order number} */
 "Unable to add tracking to order #(orderID)" = "Não foi possível adicionar o rastreamento ao pedido de nº (orderID)";
 
 /* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
-"Unable to change status of order #(orderID)" = "Unable to change status of order #(orderID)";
+"Unable to change status of order #(orderID)" = "Não foi possível alterar o status do pedido de nº (orderID)";
 
 /* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
 "Unable to delete tracking for order #(orderID)" = "Não foi possível excluir o rastreamento do pedido de nº (orderID)";
@@ -1070,13 +1093,13 @@
 "Unable to find WooCommerce stores connected to this account" = "Não foi possível encontrar lojas WooCommerce vinculadas a esta conta";
 
 /* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
-"Unable to fulfill order #(orderID)" = "Unable to fulfill order #(orderID)";
+"Unable to fulfill order #(orderID)" = "Não foi possível preencher o pedido de nº (orderID)";
 
 /* Content of error presented when loading the list of shipment providers failed. It reads: Unable to load Shipment Providers */
 "Unable to load Shipment Providers" = "Não foi possível carregar as transportadoras";
 
 /* Load Action Failed */
-"Unable to load content" = "Unable to load content";
+"Unable to load content" = "Não foi possível carregar o conteúdo";
 
 /* Review error notice message. It reads: Unable to mark review as {attempted status} */
 "Unable to mark review as %@" = "Unable to mark review as %@";
@@ -1115,7 +1138,7 @@
 "Up to seven days՚ worth of logs are saved." = "Dados equivalentes a sete dias de registros foram salvos.";
 
 /* Accessibility label for the button to update the order status in Order Details */
-"Update Order Status" = "Update Order Status";
+"Update Order Status" = "Atualizar o status do pedido";
 
 /* Order updated summary date. It reads: Updated {medium formatted date} at {short style time} */
 "Updated %1$@ at %2$@" = "Atualizado em %1$@ às %2$@";
@@ -1154,8 +1177,14 @@
 /* View application log cell title */
 "View Application Log" = "Visualizar log do aplicativo";
 
+/* The descriptive label. Tapping the row will open the affliate product's link in a web view. */
+"View affiliate product" = "Visualizar produto afiliado";
+
 /* subtitle for My Tickets */
 "View previously submitted support tickets" = "Visualizar tíquetes de suporte enviados anteriormente";
+
+/* The descriptive label. Tapping the row will open the product's page in a web view. */
+"View product on store" = "Visualizar produto na loja";
 
 /* User role badge */
 "Viewer" = "Leitor";
@@ -1248,7 +1277,7 @@
 "approved" = "aprovada";
 
 /* Site Address placeholder */
-"example.wordpress.com" = "exemplo.wordpress.com";
+"example.com" = "exemplo.com";
 
 /* Later today */
 "later today" = "mais tarde hoje";
