--- a/WooCommerce/Resources/tr.lproj/Localizable.strings
+++ b/WooCommerce/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-05-15 10:54:02+0000 */
+/* Translation-Revision-Date: 2019-05-29 13:54:03+0000 */
 /* Plural-Forms: nplurals=2; plural=(n > 1); */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: tr */
@@ -188,7 +188,7 @@
 "Couldn't connect. Required XML-RPC methods are missing on the server." = "Bağlantı kurulamadı. Gerekli XML-RPC yordamları sunucuda bulunmuyor.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
-"Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Bağlantı kurulamadı. Sitenizin XMLRPC uç noktasına erişmeye çalışırken 403 hatası aldık. Uygulama, sitenizle bağlantı kurabilmek için buna gereksinim duyuyor. Bu sorunu gidermek için sunucunuzla iletişim kurun.";
+"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Bağlantı kurulamadı. Sitenizin XMLRPC uç noktasına erişmeye çalışırken 403 hatası aldık. Uygulama, sitenizle bağlantı kurabilmek için buna gereksinim duyuyor. Bu sorunu gidermek için sunucunuzla iletişim kurun.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 405 error, meaning that the host is blocking POST requests on /xmlrpc.php file. */
 "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem." = "Bağlantı kurulamadı. Sunucunuz POST isteklerini engelliyor ve uygulama sitenizle iletişim kurmak için buna gereksinim duyuyor. Bu sorunu gidermek için sunucunuzla iletişim kurun.";
@@ -223,7 +223,8 @@
 /* Accessibility hint for delete button in an individual Shipment Tracking in the order fulfillment screen */
 "Delete" = "Sil";
 
-/* Delete a Shipment Tracking */
+/* Delete a Shipment Tracking
+   Delete tracking button title */
 "Delete Tracking" = "Takibi Sil";
 
 /* Accessibility hint for Delete Shipment button in Order fulfillment screen */
@@ -239,7 +240,7 @@
 "Discount" = "İndirim";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet - Product details screen - button title for closing the view */
+   Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "Kapat";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -269,6 +270,9 @@
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "Ayarı değiştirmek için çift tıklayın.";
 
+/* Display label for the product's draft status */
+"Draft" = "Taslak";
+
 /* Email address text field placeholder */
 "Email" = "E-posta";
 
@@ -286,6 +290,9 @@
 
 /* Message to show to user when he tries to add a self-hosted site that is an empty URL. */
 "Empty URL" = "Boş adres";
+
+/* Error message shown when a URL is invalid. */
+"Enter a valid URL eg. example.com." = "ornek.com gibi geçerli bir URL girin.";
 
 /* Add custom shipping provider. Placeholder of cell presenting provider name */
 "Enter provider name" = "Sağlayıcı adını girin";
@@ -366,9 +373,6 @@
 
 /* Footer text to hide the billing cell */
 "Hide billing" = "Faturayı saklayın";
-
-/* Error message shown a URL does not point to an existing site. */
-"Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "Hımm, bu URL’de bir WordPress sitesi varmış gibi görünmüyor. Yazımı tekrar kontrol edip yeniden deneyin.";
 
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "Devre dışıysa not gizli olur";
@@ -497,6 +501,9 @@
 
 /* Plural of 'month' — a statistical unit */
 "Months" = "Aylar";
+
+/* Accessibility hint for more button in an individual Shipment Tracking in the order details screen */
+"More" = "Daha Fazla";
 
 /* Spam Action Spoken hint. */
 "Moves a comment to Spam" = "Yorumu İstenmeyen klasörüne taşır";
@@ -643,6 +650,9 @@
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of (totalValue) received via (order.paymentMethodTitle)" = "(order.paymentMethodTitle) ile alınan (totalValue) ödemesi";
 
+/* Display label for the product's pending status */
+"Pending" = "Bekleyen";
+
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "Telefon numarası: %@";
 
@@ -686,6 +696,9 @@
    Privacy settings screen title */
 "Privacy Settings" = "Gizlilik Ayarları";
 
+/* Display label for the product's private status */
+"Private" = "Özel";
+
 /* Labels an order note to let the user know it's private and not seen by the customer
    Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
 "Private note" = "Özel not";
@@ -702,6 +715,9 @@
 
 /* Add Custom shipping provider. Title of cell presenting the provider name */
 "Provider name" = "Sağlayıcı adı";
+
+/* Display label for the product's published status */
+"Publish" = "Yayınla";
 
 /* shown in promotional screens during first launch */
 "Publish from the park. Blog from the bus. Comment from the café. WordPress goes where you do." = "Gönderinizi parktan yayımlayın. Otobüste blog yazısı hazırlayın. Kafeden yorum yapın. WordPress gittiğiniz her yere gelir.";
@@ -748,7 +764,8 @@
 /* Description text used on the UI element displayed when a user has pending orders to process. */
 "Review, prepare, and ship these pending orders" = "Bu bekleyen siparişleri inceleyin, hazırlayın ve gönderin";
 
-/* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review. */
+/* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
+   Reviews descriptive label */
 "Reviews" = "İncelemeler";
 
 /* SKU label */
@@ -806,6 +823,9 @@
 
 /* Footer text to show the billing cell */
 "Show billing" = "Faturayı gösterin";
+
+/* Accessibility hint for Delete Shipment button in Order details screen */
+"Shows more options." = "Diğer seçenekleri gösterir.";
 
 /* When social login fails, this button offers to let them signup for a new WordPress.com account */
 "Sign up" = "Kaydol";
@@ -954,6 +974,9 @@
 /* No comment provided by engineer. */
 "The site address must be shorter than 64 characters." = "Site adresi 64 karakterden az olmalıdır. ";
 
+/* Error message shown a URL does not point to an existing site. */
+"The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress." = "Bu adresteki site bir WordPress sitesi değil. Siteyle bağlantı kurabilmemiz için sitede WordPress kullanılmalıdır.";
+
 /* Message shown when site deletion API failed */
 "The site could not be deleted." = "Site silinemedi.";
 
@@ -1012,14 +1035,17 @@
 /* Total label for payment view */
 "Total" = "Toplam";
 
+/* Product details screen - total orders descriptive label */
+"Total Orders" = "Toplam Sipariş";
+
 /* Description for Top Performers right column header */
 "Total Spend" = "Toplam Harcama";
 
 /* Top performers — label for the total number of products ordered */
 "Total orders: %ld" = "Toplam sipariş: %ld";
 
-/* Track package button title */
-"Track package" = "Paketi izle";
+/* Track shipment button title */
+"Track Shipment" = "Gönderim Takibi";
 
 /* Order tracking section title */
 "Tracking" = "İzleme";
@@ -1032,9 +1058,6 @@
 
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "Takip numarası: %@";
-
-/* Accessibility hint for Track Package button in Order details screen */
-"Tracks a shipment." = "Bir sevkiyatı izler.";
 
 /* Move a comment to the trash */
 "Trash" = "Çöp Kutusu";
@@ -1154,8 +1177,14 @@
 /* View application log cell title */
 "View Application Log" = "Uygulama Günlüğü’nü Görüntüleyin";
 
+/* The descriptive label. Tapping the row will open the affliate product's link in a web view. */
+"View affiliate product" = "Satış ortağı ürününü görüntüleyin";
+
 /* subtitle for My Tickets */
 "View previously submitted support tickets" = "Daha önce verilen destek biletlerini görüntüleyin";
+
+/* The descriptive label. Tapping the row will open the product's page in a web view. */
+"View product on store" = "Ürünü mağazada görüntüleyin";
 
 /* User role badge */
 "Viewer" = "İzleyici";
@@ -1248,7 +1277,7 @@
 "approved" = "onaylandı";
 
 /* Site Address placeholder */
-"example.wordpress.com" = "ornek.wordress.com";
+"example.com" = "örnek.com";
 
 /* Later today */
 "later today" = "bugün daha sonra";
