--- a/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2019-05-15 07:54:03+0000 */
+/* Translation-Revision-Date: 2019-05-30 01:54:29+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: zh_TW */
@@ -55,7 +55,7 @@
 "All" = "全部";
 
 /* Mark all notifications as read notice */
-"All notifications marked as read" = "All notifications marked as read";
+"All notifications marked as read" = "所有通知已標示為已讀";
 
 /* Instructions for users with two-factor authentication enabled. */
 "Almost there! Please enter the verification code from your authenticator app." = "快完成了！請輸入驗證器應用程式上的驗證碼。";
@@ -170,7 +170,7 @@
 "Continue reading" = "繼續閱讀";
 
 /* Copy address text button title — should be one word and as short as possible. */
-"Copy" = "Copy";
+"Copy" = "複製";
 
 /* Message shown when site purchases API failed */
 "Could not check site purchases." = "無法確認網站購買項目。";
@@ -188,7 +188,7 @@
 "Couldn't connect. Required XML-RPC methods are missing on the server." = "無法連線。伺服器缺少必要的 XML-RPC 方法。";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
-"Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "無法連結。嘗試存取網站的 XMLRPC 終端時發生 403 錯誤。此應用程式需要 XMLRPC 終端才能與你的網站通訊。請聯絡你的主機服務提供者，以解決此問題。";
+"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "無法連結。嘗試存取網站的 XMLRPC 終端時發生 403 錯誤。此應用程式需要 XMLRPC 終端才能與你的網站通訊。請聯絡你的主機服務提供者，以解決此問題。";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 405 error, meaning that the host is blocking POST requests on /xmlrpc.php file. */
 "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem." = "無法連結。你的主機服務提供者封鎖了 POST 請求，但此應用程式需要使用 POST 請求才能與你的網站通訊。請聯絡你的主機服務提供者，以解決此問題。";
@@ -223,7 +223,8 @@
 /* Accessibility hint for delete button in an individual Shipment Tracking in the order fulfillment screen */
 "Delete" = "刪除";
 
-/* Delete a Shipment Tracking */
+/* Delete a Shipment Tracking
+   Delete tracking button title */
 "Delete Tracking" = "刪除追蹤";
 
 /* Accessibility hint for Delete Shipment button in Order fulfillment screen */
@@ -239,7 +240,7 @@
 "Discount" = "折扣";
 
 /* Add a note screen - button title for closing the view
-   Dismiss the action sheet - Product details screen - button title for closing the view */
+   Dismiss the action sheet - Dismiss the shipment tracking action sheet - Product details screen - button title for closing the view */
 "Dismiss" = "關閉";
 
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
@@ -269,6 +270,9 @@
 /* VoiceOver accessibility hint, informing the user that double-tapping will toggle the switch off and on. */
 "Double tap to toggle setting." = "按兩下即可切換設定。";
 
+/* Display label for the product's draft status */
+"Draft" = "草稿";
+
 /* Email address text field placeholder */
 "Email" = "電子郵件";
 
@@ -286,6 +290,9 @@
 
 /* Message to show to user when he tries to add a self-hosted site that is an empty URL. */
 "Empty URL" = "空的網址";
+
+/* Error message shown when a URL is invalid. */
+"Enter a valid URL eg. example.com." = "請輸入有效的 URL，例如：example.com。";
 
 /* Add custom shipping provider. Placeholder of cell presenting provider name */
 "Enter provider name" = "輸入供應商名稱";
@@ -366,9 +373,6 @@
 
 /* Footer text to hide the billing cell */
 "Hide billing" = "隱藏帳單";
-
-/* Error message shown a URL does not point to an existing site. */
-"Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "很抱歉，這個 URL 似乎不是 WordPress 網站。請重新檢查拼法是否正確，然後再試一次。";
 
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "若停用，此備註將變成私人狀態";
@@ -498,6 +502,9 @@
 /* Plural of 'month' — a statistical unit */
 "Months" = "月";
 
+/* Accessibility hint for more button in an individual Shipment Tracking in the order details screen */
+"More" = "更多";
+
 /* Spam Action Spoken hint. */
 "Moves a comment to Spam" = "將留言移至垃圾留言";
 
@@ -565,7 +572,7 @@
 "Notifications" = "通知";
 
 /* Title that appears on top of the Notifications screen when a filter is applied. It reads: Notifications: {name of filter} */
-"Notifications: %@" = "Notifications: %@";
+"Notifications: %@" = "通知：%@";
 
 /* Alert dismissal title
    Button title. An acknowledgement of the message displayed in a prompt. - Dismisses the alert - Ok button for dismissing alert helping users understand their site address - Submit button on prompt for user information. */
@@ -625,7 +632,7 @@
 "Orders" = "訂單";
 
 /* Title that appears on top of the Order List screen when a filter is applied. It reads: Orders: {name of filter} */
-"Orders: %@" = "Orders: %@";
+"Orders: %@" = "訂單：%@";
 
 /* My Store > Settings > Other app section */
 "Other" = "其他";
@@ -642,6 +649,9 @@
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of (totalValue) received via (order.paymentMethodTitle)" = "已透過 (order.paymentMethodTitle) 收到 (totalValue) 付款";
+
+/* Display label for the product's pending status */
+"Pending" = "待審核";
 
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "電話號碼：%@";
@@ -686,6 +696,9 @@
    Privacy settings screen title */
 "Privacy Settings" = "隱私權設定";
 
+/* Display label for the product's private status */
+"Private" = "私人";
+
 /* Labels an order note to let the user know it's private and not seen by the customer
    Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
 "Private note" = "私人備註";
@@ -702,6 +715,9 @@
 
 /* Add Custom shipping provider. Title of cell presenting the provider name */
 "Provider name" = "供應商名稱";
+
+/* Display label for the product's published status */
+"Publish" = "發表";
 
 /* shown in promotional screens during first launch */
 "Publish from the park. Blog from the bus. Comment from the café. WordPress goes where you do." = "在公園發表文章，在公車上寫網誌，或在咖啡館留言，你走到哪，WordPress 跟你到哪。";
@@ -748,7 +764,8 @@
 /* Description text used on the UI element displayed when a user has pending orders to process. */
 "Review, prepare, and ship these pending orders" = "檢視、準備和運送這些待處理訂單";
 
-/* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review. */
+/* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
+   Reviews descriptive label */
 "Reviews" = "評論";
 
 /* SKU label */
@@ -806,6 +823,9 @@
 
 /* Footer text to show the billing cell */
 "Show billing" = "顯示帳單";
+
+/* Accessibility hint for Delete Shipment button in Order details screen */
+"Shows more options." = "顯示更多選項。";
 
 /* When social login fails, this button offers to let them signup for a new WordPress.com account */
 "Sign up" = "註冊";
@@ -954,6 +974,9 @@
 /* No comment provided by engineer. */
 "The site address must be shorter than 64 characters." = "網站位址長度必須小於 64 個字元。";
 
+/* Error message shown a URL does not point to an existing site. */
+"The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress." = "此位址的網站不是 WordPress 網站。為讓我們進行連結，網站必須使用 WordPress。";
+
 /* Message shown when site deletion API failed */
 "The site could not be deleted." = "網站無法刪除。";
 
@@ -1012,14 +1035,17 @@
 /* Total label for payment view */
 "Total" = "總計";
 
+/* Product details screen - total orders descriptive label */
+"Total Orders" = "總訂單數";
+
 /* Description for Top Performers right column header */
 "Total Spend" = "消費總額";
 
 /* Top performers — label for the total number of products ordered */
 "Total orders: %ld" = "訂單總數：%ld";
 
-/* Track package button title */
-"Track package" = "追蹤包裹";
+/* Track shipment button title */
+"Track Shipment" = "追蹤貨件";
 
 /* Order tracking section title */
 "Tracking" = "追蹤中";
@@ -1032,9 +1058,6 @@
 
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "追蹤號碼 %@";
-
-/* Accessibility hint for Track Package button in Order details screen */
-"Tracks a shipment." = "追蹤貨件。";
 
 /* Move a comment to the trash */
 "Trash" = "移至垃圾桶";
@@ -1091,7 +1114,7 @@
 "Unable to refresh list" = "無法重新整理清單";
 
 /* On the site picker screen, the error displayed when connecting to a site fails. It reads: Unable to successfully connect to {site name} */
-"Unable to successfully connect to %@" = "Unable to successfully connect to %@";
+"Unable to successfully connect to %@" = "無法成功連線至 %@";
 
 /* Error message displayed when an error occurred checking for email availability. */
 "Unable to verify the email address. Please try again later." = "無法驗證電子郵件地址。請稍後再試一次。";
@@ -1154,8 +1177,14 @@
 /* View application log cell title */
 "View Application Log" = "檢視應用程式記錄檔";
 
+/* The descriptive label. Tapping the row will open the affliate product's link in a web view. */
+"View affiliate product" = "查看附屬商品";
+
 /* subtitle for My Tickets */
 "View previously submitted support tickets" = "檢視先前提交的支援票證";
+
+/* The descriptive label. Tapping the row will open the product's page in a web view. */
+"View product on store" = "查看商店商品";
 
 /* User role badge */
 "Viewer" = "讀者";
@@ -1248,7 +1277,7 @@
 "approved" = "已核准";
 
 /* Site Address placeholder */
-"example.wordpress.com" = "example.wordress.com";
+"example.com" = "example.com";
 
 /* Later today */
 "later today" = "今日稍晚";
